<resources>
    <string name="app_name">Tourism</string>

    <string name="txt1">List Of Cars</string>
    <string name="txt2">Admin Home</string>
    <string name="btn1">View List</string>
    <string name="btn2">Add Car</string>
    <string name="btn3"><![CDATA[Update & Delete]]></string>
    <string name="txt3">Add Car</string>
    <string name="txt4">Car</string>
    <string name="txt5">City</string>
    <string name="txt6">Facilities</string>
    <string name="txt7">Driver Name</string>
    <string name="txt8">Contact Number</string>
    <string name="txt9">Discription</string>
    <string name="etxt">Enter Car Name</string>
    <string name="etxt2">Enter City</string>
    <string name="etxt3">Enter car Facilities</string>
    <string name="etxt4">Enter Driver Name</string>
    <string name="etxt5">Enter Phone Number</string>
    <string name="etxt6">Enter Discription</string>
    <string name="btn4">Add</string>
    <string name="txt10">Car Details</string>
    <string name="txt11">car</string>
    <string name="txt12">City</string>
    <string name="txt13">Facilities</string>
    <string name="txt14">Driver Name</string>
    <string name="txt15">Contact Number</string>
    <string name="txt16">Discription</string>
    <string name="btn5">Choose File</string>
    <string name="btn6">Back</string>
    <string name="btn7">Reset</string>
    <string name="txt17">Photo</string>
    <string name="btn8">Back</string>
    <string name="btn9">Back</string>
    <string name="txt18">Driver Details</string>
    <string name="btn10">Delete</string>
    <string name="txt19"><![CDATA[Update & Delete]]></string>
    <string name="txt25">Discription</string>
    <string name="txt24">Contact Number</string>
    <string name="txt23">Driver Name</string>
    <string name="txt22">Facilities</string>
    <string name="txt21">City</string>
    <string name="txt20">Car</string>
    <string name="btn11">Update</string>


    <string name="txtMainGuide">Admin Home</string>
    <string name="btnGuideList">GUIDE LIST</string>
    <string name="btnGuideAdd">ADD GUIDE</string>
    <string name="btnGuideEdit">EDIT DETAILS</string>
    <string name="btnGuideDelete">DELETE GUIDE</string>
    <string name="txtAddGuide">ADD NEW GUIDE</string>
    <string name="txtGuideName">Guide Name</string>
    <string name="txtGuideTown">Town</string>
    <string name="txtGuideContact">Contact Number</string>
    <string name="txtGuideDescription">Description</string>
    <string name="txtGuideLanguage">Language</string>
    <string name="txtGuideGender">Gender</string>
    <string name="txtGuidePhoto">Photo</string>
    <string name="btnAddGuideBack">Back</string>
    <string name="btnAddGuideSubmit">Submit</string>
    <string name="btnAddGuideReset">Reset</string>
    <string name="radioAddGuideMale">Male</string>
    <string name="radioAddGuideFemale">Female</string>
    <string name="btnGuideAddChoose">Choose File</string>
    <string name="txtAddGuideLanguage">Write Language</string>
    <string name="txtMainView">GUIDE DETAILS</string>
    <string name="ViewName">Name</string>
    <string name="ViewTown">Town</string>
    <string name="ViewCon">Contact Number</string>
    <string name="ViewDescription">Description</string>
    <string name="ViewLanguage">Language</string>
    <string name="VIewImage">Image</string>
    <string name="viewGuideDelete">DELETE</string>
    <string name="updateButton">Update</string>
    <string name="name">Enter Your Name</string>
    <string name="town">Enter Your Town</string>
    <string name="contact">Enter Your  Contact Number</string>
    <string name="description">Enter Your Description</string>
    <string name="language">Enter Your Language</string>
    <string name="addguid">Add Guide</string>
    <string name="listguide">List Of Guide</string>
    <string name="updateguide">Update Details</string>
    <string name="listofview">List Of Guide</string>


    <string name="View">Hotel List</string>
    <string name="Add">Add Hotel</string>
    <string name="Update">Update and Delete Hotel</string>
    <string name="Delete">Delete Hotel</string>
    <string name="add_hotel">Add Hotel</string>
    <string name="hotel_name">Hotel Name :</string>
    <string name="address">Address Line :</string>
    <string name="city">City :</string>
    <string name="district">District :</string>
    <string name="province">Province :</string>
    <string name="description1">Description :</string>
    <string name="contact_number">Contact Number :</string>
    <string name="add">ADD</string>
    <string name="DeleteH">Delete</string>
    <string name="delete">Delete</string>
    <string name="hotel_id_01">Hotel ID :</string>
    <string name="update_01">Update</string>
    <string name="hotel_id_02">Hotel ID :</string>
    <string name="description_01">Description :</string>
    <string name="contact_number_02">Contact Number :</string>
    <string name="update">Update and Delete</string>
    <string name="photo">Photo :</string>
    <string name="view_hotel_list">View Hotel List</string>
    <string name="admin_home">Admin Home</string>
    <string name="UpDate">UPDATE</string>
    <string name="hlist">List Of Hotels</string>
    <string name="placelist">List Of Place</string>

    <string name="pName">Place Name</string>
    <string name="pCity">City</string>
    <string name="pNumber">Place Number</string>
    <string name="pAddress">Place Address</string>
    <string name="addPlace">Add Place</string>
    <string name="btnAdd">Submit</string>
    <string name="pUpdate">Update</string>
    <string name="pDelete">Delete</string>
    <string name="edit">Edit Details</string>
    <string name="listView">List View</string>
    <string name="editDetails">Edit Details</string>
    <string name="phome">Home Place</string>
    <string name="pview">View Place</string>
    <string name="placedetails">Place Details</string>
    <string name="hoteldetail">Hotel Details</string>
    <string name="adminhometxt" />
    <string name="adminhometxt1">Welcome</string>
    <string name="guide">Guide</string>
    <string name="carrent">Car</string>
    <string name="hotel">Hotels</string>
    <string name="place">Places</string>
    <string name="car1">Cars</string>
    <string name="guide1">Guides</string>
    <string name="btngo">Go</string>
    <string name="btnad">ad</string>

</resources>
